# FeverThought

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  security.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/msn-messenger-icons/: 👉 Get more free stuff on Discord.html
apps/desktop/src-tauri/icons/windows-vista-icons/__MACOSX/: ._👉 Get more free stuff on Discord.html
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src/ai/clarification/: ClarificationWidget.css  ClarificationWidget.tsx
apps/desktop/src/ai/onboarding/: OnboardingWizard.css  OnboardingWizard.tsx
apps/desktop/src/ai/providers/: ProviderSetupWizard.tsx
apps/desktop/src/components/activitybar/: ActivityBar.css  ActivityBar.tsx
apps/desktop/src/components/common/: CommandPalette.css  CommandPalette.tsx  SplashScreen.tsx
apps/desktop/src/components/editor/: EditorArea.css  EditorArea.tsx
apps/desktop/src/components/panel/: Panel.css  Panel.tsx
apps/desktop/src/components/right-panel/: RightPanel.css  RightPanel.tsx
apps/desktop/src/components/sidebar/: Sidebar.css  Sidebar.tsx
apps/desktop/src/components/statusbar/: StatusBar.css  StatusBar.tsx
apps/desktop/src/components/titlebar/: TitleBar.css  TitleBar.tsx
apps/desktop/src/editor/: WelcomeScreen.css  WelcomeScreen.tsx
apps/desktop/src/editor/monaco/: MonacoWrapper.tsx
apps/desktop/src/editor/tabs/: EditorTabs.css  EditorTabs.tsx
apps/desktop/src/panels/ai/: AiPanel.css  AiPanel.tsx  DiffCard.tsx  McpStatusCard.tsx  ProviderCard.tsx
apps/desktop/src/panels/file-tree/: FileTree.css  FileTree.tsx
apps/desktop/src/panels/git/: GitPanel.tsx
apps/desktop/src/panels/search/: SearchPanel.tsx
apps/desktop/src/panels/settings/: SettingsPanel.tsx
apps/desktop/src/stores/: appStore.ts
apps/desktop/src/styles/: main.css
apps/desktop/src/styles/design-system/: tokens.css
crates/agents/: Cargo.toml
crates/agents/src/: context.rs  events.rs  lib.rs  permissions.rs  prompts.rs  routing.rs
crates/agents/src/pipeline/: mod.rs
crates/agents/src/planner/: mod.rs
crates/agents/src/roles/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  state.rs
crates/git_tools/: Cargo.toml
crates/git_tools/src/: repository.rs  types.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
crates/lsp/src/client/: mod.rs
crates/lsp/src/handlers/: mod.rs  mod_handler.rs
crates/lsp/src/transport/: mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs  registry.rs
crates/providers/src/cloud/: mod.rs
crates/providers/src/ollama/: mod.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  manager.rs  session.rs  shell.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
docs/: architecture.md  contributing-setup.md
scripts/: check.sh  setup.sh
