[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/core",
    "crates/providers",
    "crates/lsp",
    "crates/agents",
    "crates/workspace",
    "crates/settings",
    "crates/security",
    "crates/mcp",
    "crates/git_tools",
    "crates/terminal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["FeverDream"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lsp-types = "0.97"
lsp-server = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
dirs = "6"
keyring = "3"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
once_cell = "1"

# Workspace crates
feverthoth-core = { path = "crates/core" }
feverthoth-providers = { path = "crates/providers" }
feverthoth-lsp = { path = "crates/lsp" }
feverthoth-agents = { path = "crates/agents" }
feverthoth-workspace = { path = "crates/workspace" }
feverthoth-settings = { path = "crates/settings" }
feverthoth-security = { path = "crates/security" }
feverthoth-mcp = { path = "crates/mcp" }
feverthoth-git-tools = { path = "crates/git_tools" }
feverthoth-terminal = { path = "crates/terminal" }
